--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-semantic-ui-datepickers": "^2.15.0",
+    "react-syntax-highlighter": "^15.4.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.0.1"
